@@ -1,27 +1,40 @@
 package testControllers.AdminEventsManagement;
 
+
+import Exceptions.EventNotFoundException;
 import Exceptions.ServiceNotFoundException;
 import controllers.AdminControl;
-import controllers.EventsControl;
 import io.cucumber.java.en.Then;
 import io.cucumber.java.en.When;
-import models.EventPlanner;
 import models.RegisteredEvent;
+import org.junit.Assert;
 
 import java.util.List;
 
+import static controllers.AdminControl.addEventForUser;
+import static controllers.AdminControl.deleteEvent;
+
 public class TestDeleteEvent {
-   List < RegisteredEvent> registeredEvent;
+    List < RegisteredEvent> registeredEvents;
     @When("admin enter Event Name  {string}")
     public void adminEnterEventName(String string) {
-       registeredEvent = AdminControl.searchEvents(string);
+        registeredEvents = AdminControl.searchEvents(string);
     }
     @Then("deleting will complete successfully")
-    public void deletingWillCompleteSuccessfully() throws ServiceNotFoundException {
+    public void deletingWillCompleteSuccessfully() throws ServiceNotFoundException, EventNotFoundException {
         int beforDeleting = AdminControl.getAllEventsNames().size();
-        AdminControl.deleteEvent(registeredEvent.get(0));
+        deleteEvent(registeredEvents.getFirst());
         int afterDeleting = AdminControl.getAllEventsNames().size();
         assert (afterDeleting==beforDeleting-1);
+    }
+
+    @Then("deleting will not complete")
+    public void deletingWillNotComplete() {
+        // Write code here that turns the phrase above into concrete actions
+        assert(registeredEvents==null);
+        RegisteredEvent doesNotExistEvent =new RegisteredEvent();
+        Assert.assertThrows(EventNotFoundException.class, () -> deleteEvent(doesNotExistEvent));
 
     }
+
 }
